[ImageCard] Fix overflow issue by using square and square-content classes

--- a/src/App.css
+++ b/src/App.css
@@ -669,6 +669,13 @@ main {
     object-fit: cover;
 }
 
+/* .image-card-body img {
+    position: absolute;
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
+} */
+
 .favorites-card {
     width: 100%;
     height: 100%;
